--- a/Anagram/Views/Home/Index.cshtml
+++ b/Anagram/Views/Home/Index.cshtml
@@ -5,5 +5,11 @@
         <title></title>
     </head>
     <body>
+        <ul>
+            @foreach (var thing in Model)
+            {
+                <li>@thing</li>
+            }
+        </ul>
     </body>
 </html>
