add and test result method

--- a/Anagram/Views/Home/Index.cshtml
+++ b/Anagram/Views/Home/Index.cshtml
@@ -5,6 +5,10 @@
         <title></title>
     </head>
     <body>
+        <form class="" action="/anagram" method="post">
+            <input type="text" name="">
+            <input type="text" name="">
+        </form>
         <ul>
             <p>WOAH</p>
             @foreach (var list in Model)
